zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__run_bandwhich_from_fish_shell.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C):  Total Up / Down: 46Bps / 57Bps                                                                                     
01 (C): ┌Utilization by process name───────────────────────────────────────────────────────────────────────────────────────┐
02 (C): │Process                                              Connections              Up / Down                           │
03 (C): │                                                                                                                  │
04 (C): │firefox                                              3                        46Bps / 57Bps                       │
05 (C): │                                                                                                                  │
06 (C): │                                                                                                                  │
07 (C): │                                                                                                                  │
08 (C): │                                                                                                                  │
09 (C): │                                                                                                                  │
10 (C): │                                                                                                                  │
11 (C): │                                                                                                                  │
12 (C): │                                                                                                                  │
13 (C): │                                                                                                                  │
14 (C): │                                                                                                                  │
15 (C): │                                                                                                                  │
16 (C): │                                                                                                                  │
17 (C): │                                                                                                                  │
18 (C): │                                                                                                                  │
19 (C): │                                                                                                                  │
20 (C): │                                                                                                                  │
21 (C): │                                                                                                                  │
22 (C): │                                                                                                                  │
23 (C): │                                                                                                                  │
24 (C): │                                                                                                                  │
25 (C): │                                                                                                                  │
26 (C): └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
27 (C):  Press <SPACE> to pause. Use <TAB> to rearrange tables. (DNS queries hidden).                                       

