zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__saved_cursor_across_resize_longline.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 2475
expression: "format!(\"{:?}\", grid)"
---
00 (C): 
01 (C): Line 1 >fi
02 (W): ll ZZ 20_<
03 (C): YY

