zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__saved_cursor_across_resize_rewrap.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 2512
expression: "format!(\"{:?}\", grid)"
---
00 (C): 12345678
01 (W): 12345678
02 (W): 1234567Z
03 (W): 12345678

