zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__scroll_down_with_line_wraps.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): line 16aaaaaaaaaaaaaaaaaa
01 (W): aaaaaaaaaaaaaaaaaaaaaaaa
02 (C): line 17aaaaaaaaaaaaaaaaaa
03 (W): aaaaaaaaaaaaaaaaaaaaaaaa
04 (C): line 18aaaaaaaaaaaaaaaaaa
05 (W): aaaaaaaaaaaaaaaaaaaaaaaa
06 (C): line 19aaaaaaaaaaaaaaaaaa
07 (W): aaaaaaaaaaaaaaaaaaaaaaaa
08 (C): line 20aaaaaaaaaaaaaaaaaa
09 (W): aaaaaaaaaaaaaaaaaaaaaaaa

