zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__scroll_up_decrease_width_and_scroll_down.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): line 11aaaaaaaaaaaaaaaaaa
01 (W): aaaaaaaaaaaaaaaaaaaaaaaa
02 (C): line 12aaaaaaaaaaaaaaaaaa
03 (W): aaaaaaaaaaaaaaaaaaaaaaaa
04 (C): line 13aaaaaaaaaaaaaaaaaa
05 (W): aaaaaaaaaaaaaaaaaaaaaaaa
06 (C): line 14aaaaaaaaaaaaaaaaaa
07 (W): aaaaaaaaaaaaaaaaaaaaaaaa
08 (C): line 15aaaaaaaaaaaaaaaaaa
09 (W): aaaaaaaaaaaaaaaaaaaaaaaa

