zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__scroll_up_with_line_wraps.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (W): aaaaaaaaaaaaaaaaaaaaaaaa
01 (C): line 16aaaaaaaaaaaaaaaaaa
02 (W): aaaaaaaaaaaaaaaaaaaaaaaa
03 (C): line 17aaaaaaaaaaaaaaaaaa
04 (W): aaaaaaaaaaaaaaaaaaaaaaaa
05 (C): line 18aaaaaaaaaaaaaaaaaa
06 (W): aaaaaaaaaaaaaaaaaaaaaaaa
07 (C): line 19aaaaaaaaaaaaaaaaaa
08 (W): aaaaaaaaaaaaaaaaaaaaaaaa
09 (C): line 20aaaaaaaaaaaaaaaaaa

